Fix gap between project and contact sections

--- a/src/components/contact-section/contact-section.styles.scss
+++ b/src/components/contact-section/contact-section.styles.scss
@@ -3,8 +3,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-top: 4rem;
-    margin-top: -10vh;
+    padding-top: 12rem;
+    margin-top: -24vh;
     background: linear-gradient(rgba(#42568f,.9), rgba(#41568f,.9)), url(../../assets/20804.jpg);
     background-repeat: none;
 
